...
        android:layout_height="match_parent"
        android:weightSum="1">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Choose_time"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal"
            android:text="Alarm Add"
            android:textColor="#FFFF00"
...

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/hour"
                android:gravity="center"
                android:layout_marginRight="33dp"
                android:layout_marginEnd="33dp"
                android:hint="hours"
                android:textAlignment="center"
                android:textSize="38dp"
...

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/minute"
                android:gravity="center"
                android:layout_marginLeft="34dp"
                android:layout_marginStart="34dp"
                android:hint="mins"
                android:textSize="38dp"
                android:textAlignment="center"
...
                />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Confirm"
                android:id="@+id/confirm"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textColor="#FFFF00"
                android:textSize="20dp"
                android:textStyle="bold"
                android:background="#2E9AFE"/>
...
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/time_string_animation"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
...
