...
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Choose wake up activity"
            android:id="@+id/choose_wake_up"
            android:layout_alignRight="@+id/button3"
            android:layout_alignEnd="@+id/button3"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:textStyle="bold" />

...
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Solve Math Problem"
                android:id="@+id/math"
                android:layout_gravity="center_horizontal"
                android:layout_above="@+id/reverse"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="70dp"
                android:background="#F7FE2E"
                android:textSize="20dp"
...
