...
        android:id="@+id/relativeLayout2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add New Alarm"
            android:id="@+id/addBtn"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onPress" />

        <Button
...
